--- a/.mise/tasks/install
+++ b/.mise/tasks/install
@@ -1,4 +1,3 @@
 #!/usr/bin/env bash
 # mise description="Install project dependencies"
-
-mise run pip:install
+# mise depends=["pip:install", "ansible:install"]
