build(mise): ensure toplevel tasks runs inside the project root dir

--- a/.mise/tasks/install
+++ b/.mise/tasks/install
@@ -2,6 +2,8 @@
 # mise description="Install project dependencies"
 # mise depends=["pip:install", "ansible:install"]
 
+cd $root
+
 if [ ! -f .vscode/settings.json ]
 then
     echo "No .vscode/settings.json found, copying from mise template."
