--- a/.mise/tasks/ansible/install
+++ b/.mise/tasks/ansible/install
@@ -1,5 +1,6 @@
 #!/usr/bin/env bash
 # mise description="Install ansible requirements"
+# mise depends=["pip:install"]
 
 if [ -f requirements.yml ]
 then
