build: integrate uv for python dependency management

--- a/.mise/tasks/ansible/install
+++ b/.mise/tasks/ansible/install
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 # mise description="Install ansible requirements"
-# mise depends=["pip:install"]
+# mise depends=["python:install"]
 
 if [ -f requirements.yml ]
 then
